- 配置了统计功能

--- a/source/_posts/前端入坑指南-1.md
+++ b/source/_posts/前端入坑指南-1.md
@@ -15,6 +15,8 @@ categories: other
 1. ###### 学习前端难不难？ ######
 2. ###### 我要学习多久才能入门？ ######
 
+<!--more-->
+
 >下面来回答这两个问题:
 1. 学习前端难不难？
  + 难不难这个问题标准答案都是因人而异，根据个人的努力程度不同，奋斗的结果自然不同。但是我并不想说这种摸棱两可的回答，我只想说：前端技术入门非常简单！简单到在入门初期你甚至毫无逻辑能力都可以进行基础的前端工作（静态页面）。作为前端技术的大三核心：html / css / javascript，每一样都是我见过语言中入门最简单的。html和css甚至不是一门编程语言，html是一门标记语言，跟写word一样，而css我则称它是英语，什么？你告诉我你不会英语？我会告诉你css常用的词汇不过几百？前端入门简单的地方大部分都归功于html和css，你甚至只需要花一周不到的时间就可以掌握它们。
