--- a/source/_posts/前端入坑指南-2.md
+++ b/source/_posts/前端入坑指南-2.md
@@ -13,6 +13,8 @@ categories: other
 - - -
 ## 开始前所需要的准备(3h) ##
 
+<!--more-->
+
 >__配置要求__
   - 前端开发估计是所有开发中要求平台配置最低的了，在windows平台下你甚至只需要2GB的内存，随便一颗cpu芯片就可以开始前端的学习之路。但考虑到你可能会使用到photoshop以及chrome等辅助工具，建议使用一台4GB以上、i5以上的cpu芯片来开发(windows平台、其他平台可参考)
 
